# RPA

./: .gitignore  README.md
.devcontainer/: devcontainer.json
python_agent/: agent.py  mac_ui.py  pyproject.toml  run_mac_ui.py  test_click.py  test_click2.py  test_size.py
rust_core/: Cargo.toml
rust_core/src/: lib.rs
