[project]
name = "python-agent"
version = "0.1.0"
description = "Agentic RPA Python Agent with PyO3 Rust bindings"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.1.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "maturin>=1.5.0",
    "psutil>=5.9.0",
    "customtkinter>=5.2.0",
    "pynput>=1.7.6",
    "PyQt6>=6.6.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
